--- a/.github/workflows/top-issues-dashboard.yml
+++ b/.github/workflows/top-issues-dashboard.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Run top issues action
         uses: rickstaa/top-issues-action@v1
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOP_ISSUE_SECRET }}
         with:
           filter: "1772"
           label: false
