--- a/.github/workflows/top-issues-dashboard.yml
+++ b/.github/workflows/top-issues-dashboard.yml
@@ -29,14 +29,14 @@ permissions:
 
 jobs:
   showAndLabelTopIssues:
-    if: github.repository == 'anuraghazra/github-readme-stats'
+    if: github.repository == 'codenificient/github-readme-stats'
     name: Update top issues Dashboard.
     runs-on: ubuntu-latest
     steps:
       - name: Run top issues action
         uses: rickstaa/top-issues-action@7e8dda5d5ae3087670f9094b9724a9a091fc3ba1 # v1.3.101
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
         with:
           top_list_size: 10
           filter: "1772"
