--- a/.github/workflows/generate-theme-doc.yml
+++ b/.github/workflows/generate-theme-doc.yml
@@ -54,5 +54,5 @@ jobs:
           script: ./scripts/push-theme-readme.sh
         env:
           CI: true
-          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
           GH_REPO: ${{ secrets.GH_REPO }}
